--- a/i18n/po/ja_JP/_data/guides.yaml.po
+++ b/i18n/po/ja_JP/_data/guides.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-01-10 18:26+0900\n"
+"POT-Creation-Date: 2021-01-20 11:59+0000\n"
 "PO-Revision-Date: 2021-01-07 21:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -129,6 +129,27 @@ msgstr "アプリケーションの設定"
 #, no-wrap
 msgid "/guides/config"
 msgstr "/guides/config"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Discover how to create your first Quarkus application."
+msgid "Learn more about how to configure your Quarkus applications."
+msgstr "初めてのQuarkusアプリケーションを作成する方法をご紹介します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "All Configuration Properties"
+msgid "Configuration Reference"
+msgstr "すべての設定プロパティ"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/cdi-reference"
+msgid "/guides/config-reference"
+msgstr "/guides/cdi-reference"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -365,6 +386,26 @@ msgstr "REST JSONサービスの記述"
 #, no-wrap
 msgid "/guides/rest-json"
 msgstr "/guides/rest-json"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Discover how to develop highly scalable reactive REST services with JAX-RS and RESTEasy Reactive."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Writing Simple REST CRUD Services"
+msgid "Writing Highly Scalable Reactive REST Services"
+msgstr "シンプルなREST CRUDサービスの書き方"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/getting-started-reactive"
+msgid "/guides/resteasy-reactive"
+msgstr "/guides/getting-started-reactive"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -1018,6 +1059,27 @@ msgstr "/guides/amqp"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide demonstrates how your Quarkus application can utilize MicroProfile Reactive Messaging to interact with AMQP."
+msgid "This guide demonstrates how your Quarkus application can utilize MicroProfile Reactive Messaging to consume and produce HTTP messages."
+msgstr "このガイドでは、QuarkusアプリケーションがMicroProfile Reactive Messagingを利用してAMQPと対話する方法を説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using AMQP with Reactive Messaging"
+msgid "Using HTTP and WebSockets with Reactive Messaging"
+msgstr "リアクティブメッセージングでのAMQPの利用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/reactive-sql-clients"
+msgid "/guides/reactive-messaging-http"
+msgstr "/guides/reactive-sql-clients"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
 #, no-wrap
 msgid "This guide demonstrates how your Quarkus application can utilize the Apache Kafka Streams API to implement stream processing applications based on Apache Kafka."
 msgstr "このガイドでは、QuarkusアプリケーションがApache Kafka Streams APIを利用して、Apache Kafkaベースのストリーム処理アプリケーションを実装する方法を説明します。"
@@ -1249,6 +1311,26 @@ msgstr "OpenID ConnectとKeycloakを使用して認可を中央管理する"
 #, no-wrap
 msgid "/guides/security-keycloak-authorization"
 msgstr "/guides/security-keycloak-authorization"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "This guide explains how to use OpenID Connect and OAuth2 Client and Filters to acquire, refresh and propagate access tokens."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Using OpenID Connect Multi-Tenancy"
+msgid "Using OpenID Connect and OAuth2 Client and Filters"
+msgstr "OpenID Connectマルチテナントの使用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-openid-connect"
+msgid "/guides/security-openid-connect-client"
+msgstr "/guides/security-openid-connect"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -2302,6 +2384,27 @@ msgstr "/guides/spring-data-jpa"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Hibernate ORM REST Data with Panache simplifies the creation of CRUD applications based on JAX-RS and Hibernate ORM."
+msgid "Spring Data REST simplifies the creation of CRUD applications based on our Spring Data compatibility layer."
+msgstr "Hibernate ORM REST Data with Panacheは、JAX-RSとHibernate ORMをベースにしたCRUDアプリケーションの作成を簡素化します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Building Applications with Gradle"
+msgid "Writing Simple CRUD Applications with Spring Data"
+msgstr "Gradleを使ったアプリケーションの構築"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/spring-data-jpa"
+msgid "/guides/spring-data-rest"
+msgstr "/guides/spring-data-jpa"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
 #, no-wrap
 msgid "While you are encouraged to use the Quarkus security layer to secure your applications, Quarkus provides a compatibility layer for Spring Security in the form of the spring-security extension."
 msgstr "Quarkusのセキュリティレイヤーを使用してアプリケーションを保護することが推奨されていますが、Quarkusはspring-securityのエクステンションの形でSpring Securityとの互換性のあるレイヤーを提供しています。"
@@ -2659,6 +2762,25 @@ msgstr "初めてのエクステンションのビルド"
 #, no-wrap
 msgid "building-my-first-extension"
 msgstr "building-my-first-extension"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Learn how to get your extension contribute features to the Dev UI."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Introduction to CDI"
+msgid "Contributing to Dev UI"
+msgstr "CDIの紹介"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, no-wrap
+msgid "dev-ui"
+msgstr ""
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
