--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -3,39 +3,37 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-07 22:08+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/scheduler.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Scheduling Periodic Tasks"
 msgstr "Quarkus - 定期的なタスクのスケジューリング"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:12
-#, fuzzy
 msgid "Modern applications often need to run specific tasks periodically.  In this guide, you learn how to schedule periodic tasks."
 msgstr "最近のアプリケーションでは、定期的に特定のタスクを実行する必要があります。このガイドでは、定期的なタスクをスケジュールする方法を学びます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:14
-#, fuzzy
 msgid "If you need a clustered scheduler use the link:quartz[Quartz extension]."
-msgstr "クラスタ化されたスケジューラが必要な場合は、 link:quartz[Quartz拡張機能を] 使用してください。"
+msgstr "クラスタ化されたスケジューラが必要な場合は、 link:quartz[Quartz拡張機能] を使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:15
@@ -50,9 +48,8 @@ msgstr "このガイドを完成させるには、以下が必要です："
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:20
-#, fuzzy
 msgid "less than 10 minutes"
-msgstr "１０分足らず"
+msgstr "１０分未満"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:21
@@ -71,27 +68,25 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:28
-#, fuzzy
 msgid "In this guide, we create a straightforward application accessible using HTTP to get the current value of a counter.  This counter is periodically (every 10 seconds) incremented."
 msgstr "このガイドでは、カウンタの現在値を取得するためにHTTPを使用してアクセスできる簡単なアプリケーションを作成します。このカウンタは定期的に(10秒ごとに)インクリメントされます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:30
-#, fuzzy
 msgid "image:scheduling-task-architecture.png[alt=Architecture]"
-msgstr "image:scheduling-task-architecture.png[alt=\"Architecture\"]"
+msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
-msgstr "解決策"
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:35
@@ -105,13 +100,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:39
-#, fuzzy
 msgid "The solution is located in the `scheduler-quickstart` {quickstarts-tree-url}/scheduler-quickstart[directory]."
 msgstr "ソリューションは `scheduler-quickstart` {quickstarts-tree-url}/scheduler-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -155,33 +149,28 @@ msgstr "`native`  と `jvm`  の両方のモードに対応した `Dockerfile`  
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:61
-#, fuzzy
 msgid "the application configuration file"
 msgstr "アプリケーション設定ファイル"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:62
-#, fuzzy
 msgid "an `org.acme.scheduler.CountResource` resource"
 msgstr "`org.acme.scheduler.CountResource` リソース"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:63
-#, fuzzy
 msgid "an associated test"
-msgstr "関連試験"
+msgstr "関連するユニットテスト"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:65
-#, fuzzy
 msgid "The Maven project also imports the Quarkus scheduler extension."
-msgstr "Mavenプロジェクトは、Quarkusスケジューラ拡張機能もインポートします。"
+msgstr "Mavenプロジェクトは、Quarkus schedulerエクステンションもインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:68
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `scheduler` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `scheduler` 拡張機能を追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `scheduler` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler.adoc:72
@@ -206,15 +195,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:85
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating a scheduled job"
 msgstr "スケジュールされたジョブの作成"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:88
-#, fuzzy
 msgid "In the `org.acme.scheduler` package, create the `CounterBean` class, with the following content:"
-msgstr "`org.acme.scheduler` パッケージで、以下の内容の `CounterBean` クラスを作成します。"
+msgstr "`org.acme.scheduler` パッケージで、以下の内容の `CounterBean` クラスを作成します："
 
 #. type: delimited block -
 #: upstream/_guides/scheduler.adoc:92 upstream/_guides/scheduler.adoc:152
@@ -291,51 +279,44 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:126
-#, fuzzy
 msgid "Declare the bean in the _application_ scope"
-msgstr "_アプリケーション_ スコープでビーンを宣言する"
+msgstr "_application_ スコープでBeanを宣言する"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:127
-#, fuzzy
 msgid "The `get()` method allows retrieving the current value."
 msgstr "`get()` メソッドでは、現在の値を取得することができます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:130
-#, fuzzy
 msgid "Use the `@Scheduled` annotation to instruct Quarkus to run this method every 10 seconds provided a worker thread is available (Quarkus is using 10 worker threads for the scheduler). If it is not available the method invocation should be re-scheduled by default i.e it should be invoked as soon as possible. The invocation of the scheduled method does not depend on the status or result of the previous invocation."
 msgstr "`@Scheduled` アノテーションを使用して、ワーカースレッドが利用可能であれば10秒ごとにこのメソッドを実行するようにQuarkusに指示します（Quarkusはスケジューラに10個のワーカースレッドを使用しています）。ワーカースレッドが利用できない場合は、メソッドの呼び出しをデフォルトで再スケジューリングする必要があります。スケジュールされたメソッドの呼び出しは、前回の呼び出しのステータスや結果には依存しません。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:131
-#, fuzzy
 msgid "The code is pretty straightforward. Every 10 seconds, the counter is incremented."
 msgstr "コードはとても簡単です。10秒ごとにカウンタがインクリメントされます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:132
-#, fuzzy
 msgid "Define a job with a cron-like expression. The annotated method is executed at 10:15am every day."
 msgstr "cronのような式でジョブを定義します。アノテーションされたメソッドは毎日午前10時15分に実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:133
-#, fuzzy
 msgid "Define a job with a cron-like expression `cron.expr` which is configurable in `application.properties`."
-msgstr "`cron.expr` `application.properties` で設定可能な cron-like 式 でジョブを定義します。"
+msgstr "`application.properties` で設定可能な`cron.expr` で cronライク式でジョブを定義します。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:134
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Updating the application configuration file"
 msgstr "アプリケーション設定ファイルの更新"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:137
-#, fuzzy
 msgid "Edit the `application.properties` file and add the `cron.expr` configuration:"
-msgstr "`application.properties` ファイルを編集し、 `cron.expr` の設定を追加します。"
+msgstr "`application.properties` ファイルを編集し、 `cron.expr` の設定を追加します："
 
 #. type: delimited block -
 #: upstream/_guides/scheduler.adoc:143
@@ -349,13 +330,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:145
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Updating the resource and the test"
 msgstr "リソースとテストの更新"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:148
-#, fuzzy
 msgid "Edit the `CountResource` class, and update the content to:"
 msgstr "`CountResource` クラスを編集して、内容を更新します。"
 
@@ -400,21 +380,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:174
-#, fuzzy
 msgid "Inject the `CounterBean`"
-msgstr "を注入します。 `CounterBean`"
+msgstr "`CounterBean` を注入"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:175
-#, fuzzy
 msgid "Send back the current counter value"
-msgstr "現在のカウンタの値を送り返す"
+msgstr "現在のカウンタの値の返却"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:177
-#, fuzzy
 msgid "We also need to update the tests. Edit the `CountResourceTest` class to match:"
-msgstr "テストも更新する必要があります。 `CountResourceTest` クラスを一致するように編集します。"
+msgstr "テストも更新する必要があります。 `CountResourceTest` クラスを一致するように編集します："
 
 #. type: delimited block -
 #: upstream/_guides/scheduler.adoc:184
@@ -462,9 +439,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:203
-#, fuzzy
 msgid "Ensure that the response contains `count`"
-msgstr "レスポンスに以下が含まれていることを確認してください。 `count`"
+msgstr "レスポンスに `count` が含まれていることを確認"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:204
@@ -474,24 +450,21 @@ msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:209
-#, fuzzy
 msgid "Run the application with: `./mvnw compile quarkus:dev`.  In another terminal, run `curl localhost:8080/count` to check the counter value.  After a few seconds, re-run `curl localhost:8080/count` to verify the counter has been incremented."
 msgstr "`./mvnw compile quarkus:dev` でアプリケーションを実行してください。別のターミナルで `curl localhost:8080/count` を実行して、カウンタの値を確認します。数秒後に `curl localhost:8080/count` を再実行して、カウンタがインクリメントされていることを確認します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:212
-#, fuzzy
 msgid "Observe the console to verify that the message `Cron expression configured in application.properties` has been displayed indicating that the cron job using an expression configured in `application.properties` has been triggered."
 msgstr "コンソールを観察して、 `application.properties` で構成された式を使用する cron ジョブがトリガされたことを示すメッセージ `Cron expression configured in application.properties` が表示されたことを確認します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:215
-#, fuzzy
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `-runner.jar` file.  You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` ."
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` でネイティブ実行可能ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/scheduler.adoc:217
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Scheduler Configuration Reference"
 msgstr "スケジューラ設定リファレンス"
