--- a/l10n/po/ja_JP/_guides/picocli.adoc.po
+++ b/l10n/po/ja_JP/_guides/picocli.adoc.po
@@ -3,43 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-11 11:23+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/picocli.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Command Mode with Picocli"
-msgstr "Quarkus - ピコクリを使ったコマンドモード"
+msgstr "Quarkus - Picocliを使ったコマンドモード"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:12
-#, fuzzy
 msgid "https://picocli.info/[Picocli] is an open source tool for creating rich command line applications."
 msgstr "link:https://picocli.info/[Picocliは] 、リッチなコマンドラインアプリケーションを作成するためのオープンソースツールです。"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:14
-#, fuzzy
 msgid "Quarkus provides support for using Picocli. This guide contains examples of `picocli` extension usage."
-msgstr "Quarkusでは、Picocliを使用するためのサポートを提供しています。このガイドには、 `picocli` 拡張機能の使用例が記載されています。"
+msgstr "Quarkusでは、Picocliを使用するためのサポートを提供しています。このガイドには、 `picocli` エクステンションの使用例が記載されています。"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:18
-#, fuzzy
 msgid "If you are not familiar with the Quarkus Command Mode, consider reading the link:command-mode-reference[Command Mode reference guide] first."
 msgstr "Quarkusのコマンドモードに詳しくない場合は、まず link:command-mode-reference[コマンドモードのリファレンスガイド] を読むことを検討してください。"
 
@@ -51,9 +48,8 @@ msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:23
-#, fuzzy
 msgid "Once you have your Quarkus project configured you can add the `picocli` extension to your project by running the following command in your project base directory."
-msgstr "Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `picocli` 拡張機能をプロジェクトに追加できます。"
+msgstr "Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `picocli` エクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:27
@@ -78,15 +74,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:39
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Simple command line application"
 msgstr "シンプルなコマンドラインアプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:42
-#, fuzzy
 msgid "Simple PicocliApplication with only one `Command` can be created as follows:"
-msgstr "`Command` を 1 つだけ使ったシンプルな PicocliApplication は、以下のように作成できます。"
+msgstr "`Command` を 1 つだけ使ったシンプルな PicocliApplication は、以下のように作成できます："
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:46 upstream/_guides/picocli.adoc:106
@@ -165,21 +160,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:78
-#, fuzzy
 msgid "If there is only one class annotated with `picocli.CommandLine.Command` it will be used as entry point to Picocli CommandLine."
 msgstr "`picocli.CommandLine.Command` でアノテーションされたクラスが 1 つだけある場合、それは Picocli CommandLine のエントリポイントとして使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:79
-#, fuzzy
 msgid "All classes annotated with `picocli.CommandLine.Command` are registered as CDI beans."
-msgstr "`picocli.CommandLine.Command` でアノテーションされたクラスはすべて CDI 豆として登録されています。"
+msgstr "`picocli.CommandLine.Command` でアノテーションされたクラスはすべて CDI Beanとして登録されています。"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:83
-#, fuzzy
 msgid "Beans with `@CommandLine.Command` should not use proxied scopes (e.g. do not use `@ApplicationScope`)  because Picocli will not be able set field values in such beans. This extension will register classes with `@CommandLine.Command` annotation using `@Depended` scope. If you need to use proxied scope, then annotate setter and not field, for example:"
-msgstr "`@CommandLine.Command` を持つビーンでは、Picocli はそのようなビーンでフィールド値を設定できないため、プロキシドスコープを使用してはいけません (例: `@ApplicationScope` を使用しないでください)。この拡張機能は `@CommandLine.Command` アノテーションを持つクラスを `@Depended` スコープを使って登録します。プロキシドスコープを使用する必要がある場合は、フィールドではなくセッターをアノテーションしてください。"
+msgstr "`@CommandLine.Command` を持つBeanでは、プロキシされるスコープを使用してはいけません (例: `@ApplicationScope` を使用しないでください)。Picocli はそのようなBeanでフィールド値を設定できないためです。このエクステンションは `@CommandLine.Command` アノテーションを持つクラスを `@Depended` スコープを使って登録します。プロキシされるスコープを使用する必要がある場合は、フィールドではなくセッターを次の例のようにアノテーションしてください："
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:89
@@ -209,13 +201,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:98
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Command line application with multiple Commands"
 msgstr "複数のコマンドを使用したコマンドラインアプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:102
-#, fuzzy
 msgid "When multiple classes have the `picocli.CommandLine.Command` annotation, then one of them needs to be also annotated with `io.quarkus.picocli.runtime.annotations.TopCommand`.  This can be overwritten with the `quarkus.picocli.top-command` property."
 msgstr "複数のクラスが `picocli.CommandLine.Command` アノテーションを持つ場合、そのうちの 1 つに `io.quarkus.picocli.runtime.annotations.TopCommand` アノテーションを付ける必要があります。これは `quarkus.picocli.top-command` プロパティで上書きすることができます。"
 
@@ -277,15 +268,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:134
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Customizing Picocli CommandLine instance"
-msgstr "Picocliコマンドラインインスタンスのカスタマイズ"
+msgstr "Picocli CommandLineインスタンスのカスタマイズ"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:137
-#, fuzzy
 msgid "You can customize CommandLine classes used by the `picocli` extension by producing your own bean instance:"
-msgstr "独自のBeanインスタンスを生成することで、 `picocli` 拡張機能で使用されるCommandLineクラスをカスタマイズすることができます。"
+msgstr "独自のBeanインスタンスを生成することで、 `picocli` エクステンションで使用されるCommandLineクラスをカスタマイズすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:145
@@ -347,19 +337,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:171
-#, fuzzy
 msgid "`PicocliCommandLineFactory` will create an instance of CommandLine with `TopCommand` and `CommandLine.IFactory` injected."
 msgstr "`PicocliCommandLineFactory` は、 `TopCommand` と `CommandLine.IFactory` を注入した CommandLine のインスタンスを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:172
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Different entry command for each profile"
 msgstr "プロファイルごとに異なるエントリコマンド"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:175
-#, fuzzy
 msgid "It is possible to create different entry command for each profile, using `@IfBuildProfile`:"
 msgstr "`@IfBuildProfile` を使用して、プロファイルごとに異なるエントリコマンドを作成することができます。"
 
@@ -397,21 +385,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:198
-#, fuzzy
 msgid "You can return instance of `java.lang.Class` here. In such case `CommandLine` will try to instantiate this class using `CommandLine.IFactory`."
 msgstr "ここでは `java.lang.Class` のインスタンスを返すことができます。この場合、 `CommandLine` は `CommandLine.IFactory` を使ってこのクラスのインスタンスを作成しようとします。"
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:199
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configure CDI Beans with parsed arguments"
-msgstr "解析された引数でCDIビーンズを設定する"
+msgstr "解析された引数でCDI Beansを設定する"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:204
-#, fuzzy
 msgid "You can use `Event<CommandLine.ParseResult>` or just `CommandLine.ParseResult` to configure CDI beans based on arguments parsed by Picocli.  This event will be generated in `QuarkusApplication` class created by this extension. If you are providing your own `@QuarkusMain` this event will not be raised.  `CommandLine.ParseResult` is created from default `CommandLine` bean."
-msgstr "Picocliによって解析された引数に基づいてCDI豆を設定するために、 `Event<CommandLine.ParseResult>` 、または単に `CommandLine.ParseResult` を使用することができます。このイベントは、この拡張機能によって作成された `QuarkusApplication` クラスで生成されます。独自の `@QuarkusMain` を提供している場合、このイベントは発生しません。 `CommandLine.ParseResult` はデフォルトの `CommandLine` ビーンから作成されます。"
+msgstr "Picocliによって解析された引数に基づいてCDI Beanを設定するために、 `Event<CommandLine.ParseResult>` 、または単に `CommandLine.ParseResult` を使用することができます。このイベントは、このエクステンションによって作成された `QuarkusApplication` クラスで生成されます。独自の `@QuarkusMain` を提供している場合、このイベントは発生しません。 `CommandLine.ParseResult` はデフォルトの `CommandLine` Beanから作成されます。"
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:209
@@ -476,19 +462,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:239
-#, fuzzy
 msgid "`@ApplicationScoped` used for lazy initialization"
 msgstr "`@ApplicationScoped` 遅延初期化に使用"
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:240
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Providing own QuarkusMain"
 msgstr "独自のQuarkusMainの提供"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:243
-#, fuzzy
 msgid "You can also provide your own application entry point annotated with `QuarkusMain` (as described in link:command-mode-reference[Command Mode reference guide])."
 msgstr "また、 `QuarkusMain` でアノテーションされた独自のアプリケーションのエントリーポイントを提供することもできます（ link:command-mode-reference[コマンドモードのリファレンスガイド] に記載されています）。"
 
@@ -541,21 +525,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:272
-#, fuzzy
 msgid "Quarkus-compatible `CommandLine.IFactory` bean created by `picocli` extension."
-msgstr "`picocli` の拡張子で作成されたQuarkus互換の `CommandLine.IFactory` Bean。"
+msgstr "`picocli` のエクステンションで作成されたQuarkus互換の `CommandLine.IFactory` Bean。"
 
 #. type: Title ==
 #: upstream/_guides/picocli.adoc:273
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Native mode support"
 msgstr "ネイティブモードのサポート"
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:276
-#, fuzzy
 msgid "This extension uses the Quarkus standard build steps mechanism to support GraalVM Native images. In the exceptional case that incompatible changes in a future picocli release cause any issue, the following configuration can be used to fall back to the annotation processor from the picocli project as a temporary workaround:"
-msgstr "この拡張機能では、Quarkus標準のビルドステップメカニズムを使用して、GraalVM Nativeイメージをサポートしています。将来のpicocliリリースで互換性のない変更が問題を引き起こす例外的なケースでは、一時的な回避策として、以下の設定を使用してpicocliプロジェクトのアノテーションプロセッサにフォールバックすることができます。"
+msgstr "このエクステンションでは、Quarkus標準のビルドステップメカニズムを使用して、GraalVM Nativeイメージをサポートしています。将来のpicocliリリースで互換性のない変更が問題を引き起こす例外的なケースでは、一時的な回避策として、以下の設定を使用してpicocliプロジェクトのアノテーションプロセッサにフォールバックすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/picocli.adoc:283
@@ -569,7 +551,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/picocli.adoc:286
-#, fuzzy
 msgid "For Gradle, you need to add the following in `dependencies` section of the `build.gradle` file:"
 msgstr "Gradleの場合は、 `build.gradle` ファイルの `dependencies` セクションに以下を追加する必要があります。"
 
