--- a/l10n/po/ja_JP/_guides/gradle-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-config.adoc.po
@@ -3,40 +3,38 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-11 21:45+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/gradle-config.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Gradle Plugin Repositories"
 msgstr "Quarkus - Gradleプラグインリポジトリ"
 
-#.  tag::repositories[]
+#. tag::repositories[]
 #. type: Plain text
 #: upstream/_guides/gradle-config.adoc:12
-#, fuzzy
 msgid "The Quarkus Gradle plugin is published to the https://plugins.gradle.org/plugin/io.quarkus[Gradle Plugin Portal]."
 msgstr "Quarkus Gradleプラグインは、Gradle link:https://plugins.gradle.org/plugin/io.quarkus[プラグインポータル] に公開されています。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-config.adoc:14
-#, fuzzy
 msgid "To use it, add the following to your `build.gradle` file:"
-msgstr "使用するには、 `build.gradle` ファイルに以下を追加します。"
+msgstr "使用するには、 `build.gradle` ファイルに以下を追加します："
 
 #. type: delimited block -
 #: upstream/_guides/gradle-config.adoc:21
@@ -50,9 +48,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-config.adoc:24
-#, fuzzy
 msgid "You also need to add the following at the top of your `settings.gradle` file:"
-msgstr "また、 `settings.gradle` ファイルの先頭に以下を追加する必要があります。"
+msgstr "また、 `settings.gradle` ファイルの先頭に以下を追加する必要があります："
 
 #. type: delimited block -
 #: upstream/_guides/gradle-config.adoc:35
@@ -71,15 +68,14 @@ msgstr ""
 
 #. type: Labeled list
 #: upstream/_guides/gradle-config.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NOTE"
 msgstr "ノート"
 
 #. type: Plain text
 #: upstream/_guides/gradle-config.adoc:38
-#, fuzzy
 msgid "the `plugins{}` method in `settings.gradle` is not supported in Gradle 5.x. In this case make sure to explicitly declare the plugin version in the `build.gradle` file like the example below:"
-msgstr "`settings.gradle` の `plugins{}` メソッドは Gradle 5.x ではサポートされていません。この場合、以下の例のように `build.gradle` ファイルでプラグインのバージョンを明示的に宣言してください。"
+msgstr "`settings.gradle` の `plugins{}` メソッドは Gradle 5.x ではサポートされていません。この場合、以下の例のように `build.gradle` ファイルでプラグインのバージョンを明示的に宣言してください："
 
 #. type: delimited block -
 #: upstream/_guides/gradle-config.adoc:45
