--- a/l10n/po/ja_JP/_guides/tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/tooling.adoc.po
@@ -3,27 +3,27 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-11 21:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/tooling.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using our Tooling"
-msgstr "Quarkus - ツールを使用する"
+msgstr "Quarkus - ツールの使用"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:12
@@ -47,19 +47,16 @@ msgstr "ツールチェインにネイティブCLIを使用する方法（近日
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:17
-#, fuzzy
 msgid "how to create and scaffold a new project"
-msgstr "新規プロジェクトの作り方と足場の作り方"
+msgstr "新規プロジェクトの作成方法、スキャフォールド方法"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:18
-#, fuzzy
 msgid "how to deal with extensions"
 msgstr "エクステンションの扱い方"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:19
-#, fuzzy
 msgid "how to enable live reload"
 msgstr "ライブリロードを有効にする方法"
 
@@ -70,7 +67,6 @@ msgstr "IDEでアプリケーションを開発する方法"
 
 #. type: Plain text
 #: upstream/_guides/tooling.adoc:21
-#, fuzzy
 msgid "how to compile your application natively"
 msgstr "アプリケーションをネイティブにコンパイルする方法"
 
